--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="استدیو تخصصی عکاسی آرایشی و بهداشتی رزیتا شمس">
+  <meta name="description" content="استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس">
   <meta name="keywords" content="استدیو, عکاسی, آرایشی, بهداشتی, عطر, رژ لب, ضد آفتاب, محصولات">
   <meta name="author" content="Rozita Shams">
-  <meta property="og:title" content="استدیو تخصصی عکاسی آرایشی و بهداشتی رزیتا شمس">
-  <meta property="og:description" content="استدیو تخصصی عکاسی آرایشی و بهداشتی رزیتا شمس، عطرها، آرایشی و بهداشتی">
+  <meta property="og:title" content="استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس">
+  <meta property="og:description" content="استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس، عطرها، آرایشی و بهداشتی">
   <meta property="og:image" content="Logo.jpg">
   <meta property="og:url" content="https://rozitashams.github.io">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="استدیو تخصصی عکاسی آرایشی و بهداشتی رزیتا شمس">
-  <meta name="twitter:description" content="استدیو تخصصی عکاسی آرایشی و بهداشتی رزیتا شمس">
+  <meta name="twitter:title" content="استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس">
+  <meta name="twitter:description" content="استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس">
   <meta name="twitter:image" content="Logo.jpg">
   <meta name="robots" content="index, follow">
-  <title>استدیو تخصصی عکاسی آرایشی و بهداشتی رزیتا شمس</title>
+  <title>استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  
+
   <!-- لینک های مورد نیاز برای Slick Slider -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
@@ -40,9 +40,10 @@
     }
 
     .logo {
-      height: 60px;
+      height: 80px;
       object-fit: contain;
       max-width: 100%;
+      border-radius: 10px;
     }
 
     img {
@@ -109,13 +110,18 @@
       display: block;
       margin: 0 auto;
     }
+
+    .slider img {
+      border-radius: 10px;
+    }
+
   </style>
 </head>
 <body>
 
 <header>
-  <img src="Logo.jpg" alt="لوگوی استدیو تخصصی عکاسی آرایشی و بهداشتی رزیتا شمس" class="logo">
-  <h1>استدیو تخصصی عکاسی آرایشی و بهداشتی رزیتا شمس</h1>
+  <img src="Logo.jpg" alt="استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس" class="logo">
+  <h1>استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس</h1>
 </header>
 
 <!-- اسلاید تصاویر -->
@@ -136,6 +142,7 @@
 <!-- عکس‌های هر دسته -->
 <div id="perfumes" class="category">
   <img src="perfume6.jpg" alt="عطر Rozita Shams">
+  <img src="perfumeee.jpg" alt="عطر Rozita Shams">
 </div>
 
 <div id="cosmetics" class="category" style="display:none;">
@@ -145,6 +152,8 @@
 <div id="healthcare" class="category" style="display:none;">
   <img src="sun.jpg" alt="ضد آفتاب Rozita Shams">
   <img src="20240204_165135.jpg" alt="نرم‌کننده Rozita Shams">
+  <img src="ton.jpg" alt="تونر Rozita Shams">
+  <img src="new.roj.jpg" alt="رژ لب Rozita Shams">
 </div>
 
 <!-- دکمه‌های واتساپ و اینستاگرام -->
