--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fa">
 <head>
@@ -125,12 +124,13 @@
   <h1>استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس</h1>
 </header>
 
-<!-- اسلاید تصاویر -->
+<!-- اسلاید تصاویر بالای صفحه -->
 <div class="slider">
   <img src="perfume6.jpg" alt="عطر Rozita Shams">
   <img src="sun.jpg" alt="ضد آفتاب Rozita Shams">
   <img src="20240204_165135.jpg" alt="نرم‌کننده Rozita Shams">
   <img src="20240801_120509.jpg" alt="رژ لب Rozita Shams">
+  <img src="green2.jpg" alt="لاک Rozita Shams">
 </div>
 
 <!-- دسته‌بندی‌ها -->
@@ -151,6 +151,7 @@
 <div id="cosmetics" class="category" style="display:none;">
   <div class="slider">
     <img src="new.roj.jpg" alt="رژ لب Rozita Shams">
+    <img src="green2.jpg" alt="لاک Rozita Shams">
   </div>
 </div>
 
