--- a/index.html
+++ b/index.html
@@ -3,168 +3,159 @@
 <html lang="fa">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس">
-    <meta name="keywords" content="استدیو, عکاسی, آرایشی, بهداشتی, رزیتا شمس, عطر, رژ, ضد آفتاب">
-    <meta name="author" content="Rozita Shams">
-    <meta name="robots" content="index, follow">
-    <link rel="icon" href="https://github.com/rozitashams/rozitashams.github.io/raw/main/favicon.ico">
-    <title>استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس</title>
-    <style>
-        /* تنظیمات عمومی */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="استدیو تخصصی تبلیغاتی و عکاسی محصولات آرایشی و بهداشتی رزیتا شمس">
+  <meta name="keywords" content="عکاسی, استدیو, تبلیغات, آرایشی, بهداشتی, عطر, رژ, ضدآفتاب, رزیتا شمس">
+  <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="کد تأیید گوگل اینجا در صورت نیاز">
+  <link rel="icon" href="https://rozitashams.github.io/favicon.ico" type="image/x-icon">
+  <title>استدیو تبلیغاتی رزیتا شمس</title>
 
-        .header {
-            text-align: center;
-            padding: 20px;
-        }
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background-color: #fff;
+      direction: rtl;
+      text-align: center;
+    }
 
-        .header img {
-            max-width: 100%;
-            height: auto;
-            border: none;
-        }
+    header {
+      background: #fff;
+      padding: 10px;
+    }
 
-        /* استایل اسلاید */
-        .carousel-container {
-            position: relative;
-            width: 100%;
-            overflow: hidden;
-            margin: 20px auto;
-        }
+    header img {
+      height: 100px;
+      border: none;
+    }
 
-        .carousel {
-            display: flex;
-            transition: transform 0.5s ease-in-out;
-        }
+    h1 {
+      font-size: 20px;
+      margin-top: 10px;
+    }
 
-        .carousel img {
-            width: 100%;
-            height: 300px;
-            object-fit: cover;
-        }
+    .carousel-container {
+      width: 100%;
+      overflow: hidden;
+      position: relative;
+      margin: 20px 0;
+    }
 
-        /* دکمه‌های اجتماعی */
-        .social-buttons {
-            text-align: center;
-            margin-top: 20px;
-        }
+    .carousel-track {
+      display: flex;
+      transition: transform 0.5s ease;
+    }
 
-        .social-buttons a {
-            margin: 10px;
-            font-size: 30px;
-            text-decoration: none;
-            color: #000;
-        }
+    .carousel-track img {
+      width: 100%;
+      max-width: 400px;
+      height: auto;
+      object-fit: cover;
+      margin: 0 5px;
+    }
 
-        /* دسته‌بندی‌ها */
-        .category-section {
-            display: flex;
-            justify-content: space-between;
-            margin: 20px;
-        }
+    .category {
+      margin: 40px 0;
+    }
 
-        .category {
-            flex: 1;
-            margin: 0 10px;
-            text-align: center;
-        }
+    .category h2 {
+      margin-bottom: 10px;
+      font-size: 18px;
+    }
 
-        .category h2 {
-            margin-bottom: 10px;
-        }
+    .social-buttons {
+      margin: 40px 0 20px;
+    }
 
-        .category .carousel img {
-            height: 200px;
-        }
-    </style>
+    .social-buttons a {
+      margin: 0 10px;
+      display: inline-block;
+    }
+
+    .social-buttons img {
+      width: 40px;
+      height: 40px;
+    }
+
+  </style>
 </head>
 
 <body>
-    <!-- لوگو -->
-    <div class="header">
-        <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/Logo.jpg" alt="استدیو تخصصی عکاسی محصولات آرایشی و بهداشتی رزیتا شمس">
+
+  <!-- لوگو و عنوان -->
+  <header>
+    <img src="https://rozitashams.github.io/Logo.jpg" alt="لوگو استدیو رزیتا شمس">
+    <h1>استدیو تخصصی تبلیغاتی و عکاسی محصولات آرایشی و بهداشتی رزیتا شمس</h1>
+  </header>
+
+  <!-- اسلاید اصلی -->
+  <div class="carousel-container">
+    <div class="carousel-track" id="main-carousel">
+      <img src="https://rozitashams.github.io/perfume6.jpg" alt="عطر">
+      <img src="https://rozitashams.github.io/perfumeee.jpg" alt="عطر دوم">
+      <img src="https://rozitashams.github.io/sun.jpg" alt="ضدآفتاب">
+      <img src="https://rozitashams.github.io/ton.jpg" alt="تونر">
+      <img src="https://rozitashams.github.io/20240204_165135.jpg" alt="نرم کننده مو">
+      <img src="https://rozitashams.github.io/new.roj.jpg" alt="رژ لب">
+      <img src="https://rozitashams.github.io/20240801_120509.jpg" alt="برق لب">
+      <img src="https://rozitashams.github.io/green2.jpg" alt="لاک">
     </div>
+  </div>
 
-    <!-- اسلاید اصلی بالای صفحه -->
-    <div class="carousel-container">
-        <div class="carousel" id="mainCarousel">
-            <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/perfume6.jpg" alt="عطر Rozita Shams">
-            <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/sun.jpg" alt="ضد آفتاب Rozita Shams">
-            <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/20240204_165135.jpg" alt="نرم‌کننده Rozita Shams">
-            <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/20240801_120509.jpg" alt="رژ لب Rozita Shams">
-            <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/green2.jpg" alt="لاک Rozita Shams">
-        </div>
+  <!-- دسته بندی‌ها -->
+  <div class="category">
+    <h2>عطرها</h2>
+    <div class="carousel-track">
+      <img src="https://rozitashams.github.io/perfume6.jpg" alt="عطر">
+      <img src="https://rozitashams.github.io/perfumeee.jpg" alt="عطر دیگر">
     </div>
+  </div>
 
-    <!-- دسته‌بندی‌ها -->
-    <div class="category-section">
-        <!-- عطرها -->
-        <div class="category">
-            <h2>عطرها</h2>
-            <div class="carousel">
-                <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/perfume6.jpg" alt="عطر Rozita Shams">
-                <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/perfumeee.jpg" alt="عطر Rozita Shams">
-            </div>
-        </div>
-
-        <!-- آرایشی -->
-        <div class="category">
-            <h2>آرایشی</h2>
-            <div class="carousel">
-                <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/new.roj.jpg" alt="رژ لب Rozita Shams">
-            </div>
-        </div>
-
-        <!-- بهداشتی -->
-        <div class="category">
-            <h2>بهداشتی</h2>
-            <div class="carousel">
-                <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/sun.jpg" alt="ضد آفتاب Rozita Shams">
-                <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/ton.jpg" alt="تونر Rozita Shams">
-                <img src="https://github.com/rozitashams/rozitashams.github.io/raw/main/20240204_165135.jpg" alt="نرم‌کننده Rozita Shams">
-            </div>
-        </div>
+  <div class="category">
+    <h2>آرایشی</h2>
+    <div class="carousel-track">
+      <img src="https://rozitashams.github.io/new.roj.jpg" alt="رژ لب">
+      <img src="https://rozitashams.github.io/20240801_120509.jpg" alt="برق لب">
+      <img src="https://rozitashams.github.io/green2.jpg" alt="لاک">
     </div>
+  </div>
 
-    <!-- دکمه‌های اجتماعی -->
-    <div class="social-buttons">
-        <a href="https://wa.me/09121839844" target="_blank">واتساپ</a>
-        <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">اینستاگرام</a>
+  <div class="category">
+    <h2>بهداشتی</h2>
+    <div class="carousel-track">
+      <img src="https://rozitashams.github.io/sun.jpg" alt="ضد آفتاب">
+      <img src="https://rozitashams.github.io/ton.jpg" alt="تونر">
+      <img src="https://rozitashams.github.io/20240204_165135.jpg" alt="نرم کننده">
     </div>
+  </div>
 
-    <script>
-        // اسلاید اصلی (برای چرخش)
-        let mainCarousel = document.getElementById('mainCarousel');
-        let index = 0;
+  <!-- دکمه‌های اجتماعی -->
+  <div class="social-buttons">
+    <a href="https://wa.me/989121839844" target="_blank">
+      <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="واتساپ">
+    </a>
+    <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">
+      <img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="اینستاگرام">
+    </a>
+  </div>
 
-        function slide() {
-            index++;
-            if (index >= 5) {
-                index = 0;
-            }
-            mainCarousel.style.transform = 'translateX(' + (-index * 100) + '%)';
-        }
-        setInterval(slide, 3000); // هر 3 ثانیه یک بار تغییر می‌کند
+  <script>
+    const carousel = document.getElementById('main-carousel');
+    let scrollAmount = 0;
+    setInterval(() => {
+      scrollAmount += 420;
+      if (scrollAmount >= carousel.scrollWidth) {
+        scrollAmount = 0;
+      }
+      carousel.scrollTo({
+        left: scrollAmount,
+        behavior: 'smooth'
+      });
+    }, 3000);
+  </script>
 
-        // اسلاید دسته‌ها
-        document.querySelectorAll('.category .carousel').forEach((carousel) => {
-            let catIndex = 0;
-            setInterval(() => {
-                catIndex++;
-                if (catIndex >= 2) {
-                    catIndex = 0;
-                }
-                carousel.style.transform = 'translateX(' + (-catIndex * 100) + '%)';
-            }, 3000);
-        });
-    </script>
 </body>
 
 </html>
